syntax = "proto3";
package com.sequsoft.bufmark.protobuf;

import "P_Country.proto";

option java_package = "com.sequsoft.bufmark.protobuf";
option java_multiple_files = true;

message P_Address {
    string id = 1;
    repeated string addressLines = 2;
    string locality = 3;
    string postcode = 4;
    P_Country country = 5;
}