syntax = "proto3";
package com.sequsoft.bufmark.protobuf;

import "P_House.proto";
import "P_Person.proto";

option java_package = "com.sequsoft.bufmark.protobuf";
option java_multiple_files = true;

message P_HouseGroup {
    string id = 1;
    repeated P_House houses = 2;
    repeated P_Person organisers = 3;
}