syntax = "proto3";
package com.sequsoft.bufmark.protobuf;

import "google/protobuf/timestamp.proto";
import "P_Sex.proto";

option java_package = "com.sequsoft.bufmark.protobuf";
option java_multiple_files = true;

message P_Person {
  string id = 1;
  string name = 2;
  P_Sex sex = 3;
  google.protobuf.Timestamp dateOfBirth = 4;
  string about = 5;
}