syntax = "proto3";
package com.sequsoft.bufmark.protobuf;

import "House.proto";
import "Person.proto";

option java_package = "com.sequsoft.bufmark.protobuf";
option java_multiple_files = true;

message HouseGroup {
    string id = 1;
    repeated House houses = 2;
    repeated Person organisers = 3;
}