syntax = "proto3";
package com.sequsoft.bufmark.protobuf;

import "P_Address.proto";
import "P_Person.proto";

option java_package = "com.sequsoft.bufmark.protobuf";
option java_multiple_files = true;

message P_House {
    string id = 1;
    P_Address address = 2;
    repeated P_Person occupants = 3;
}